# dbt-northwind

./: .gitignore  README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/marts/: sales.sql
northwind/models/raw/: raw_seeds__nova_tabela.sql
northwind/models/staging/: staging_seeds__nova_tabela.sql
northwind/seeds/: region.csv  teste_tabela.csv
